# mememachine-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  start.sh
.github/: release.yml
.github/workflows/: build.yml  bump.yml  ci-bot.yml  ci-dashboard.yml  ci-old.yml.bak  ci-workflow.yml  ci.yml  deploy.yml  lint.yml  release.yml  tag.yml
bot/: .editorconfig  Cargo.toml  Dockerfile
bot/src/: commands.rs  handler.rs  main.rs  util.rs
dashboard/: .gitignore  .prettierrc.js  components.json  drizzle.config.ts  package-lock.json  package.json  vite.config.ts
dashboard/app/: entry.server.tsx  root.tsx  tailwind.css
dashboard/app/components/ui/: chart.tsx  data-table.tsx  dropdown-menu.tsx  form.tsx  separator.tsx  simple-pagination.tsx  table.tsx  toast.tsx  tooltip.tsx
dashboard/app/config/: config.server.ts  constants.server.ts  env.server.ts
dashboard/app/db/: config.server.ts  init.server.ts  schema.server.ts  seed.server.ts
dashboard/app/db/migrations/: 0000_known_micromacro.sql  0000_mysterious_pride.sql  0001_sparkling_centennial.sql
dashboard/app/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
dashboard/app/lib/: utils.ts
dashboard/app/routes/: _auth._index.tsx  _auth.tsx  _index.tsx  dashboard.tsx  healthcheck.tsx  login.tsx  logout.tsx  register.tsx  upload.tsx  users.delete.tsx
dashboard/app/routes/_auth.users/: route.tsx  service.server.ts
dashboard/app/routes/users/: route.tsx  service.server.ts  service.ts  types.ts
dashboard/app/services/: auth-schema.ts  auth.server.ts  session.server.ts
scripts/: start_mememachine.sh  update.sh
src/: commands.rs  handler.rs  main.rs  util.rs
