[package]
name = "mememachine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rand = "0.8"
songbird = "0.3"
sorted-vec = "0.8.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

[dependencies.serenity]
version = "0.11"
features = ["cache", "voice", "http", "rustls_backend"]
default_features = false

[dependencies.tokio]
version = "1.26"
features = ["macros", "rt-multi-thread"]
