[package]
name = "mememachine-rs"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
songbird = "0.3.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
uuid = { version = "1.3", features = ["v4"] }

[dependencies.serenity]
version = "0.11"
features = ["cache", "voice", "http", "rustls_backend"]
default_features = false

[dependencies.tokio]
version = "1.26"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = "fat"
strip = "debuginfo"
