[package]
name = "mememachine-rs"
version = "1.0.0"
edition = "2021"
authors = ["klevente"]
description = "A Discord soundboard bot"
repository = "https://github.com/klevente/mememachine-rs"
license = "MIT"
keywords = ["discord", "soundboard", "bot"]

[dependencies]
rand = "0.8"
songbird = "0.3.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
uuid = { version = "1.3", features = ["v4"] }

[dependencies.serenity]
version = "0.11"
features = ["cache", "voice", "http", "rustls_backend"]
default_features = false

[dependencies.tokio]
version = "1.26"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = "fat"
strip = "debuginfo"
