[package]
name = "mememachine-rs"
version = "0.1.9"
edition = "2021"
authors = ["klevente"]
description = "A Discord soundboard bot"
repository = "https://github.com/klevente/mememachine-rs"
license = "MIT"
keywords = ["discord", "soundboard", "bot"]

[dependencies]
anyhow = "1.0"
async-sqlite = "0.3"
rand = "0.8"
songbird = "0.4.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
uuid = { version = "1.3", features = ["v4"] }

[dependencies.serenity]
version = "0.12"
features = ["cache", "voice", "http", "rustls_backend"]
default-features = false

[dependencies.symphonia]
version = "0.5.4"
features = ["mp3"]

[dependencies.tokio]
version = "1.39"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = "fat"
strip = "debuginfo"
